src/snapshots/tptp__tests__tfx_system_atomic-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Function(
    SystemFunctor(
        AtomicSystemWord(
            DollarDollarWord(
                LowerWord(
                    "system",
                ),
            ),
        ),
    ),
    Arguments(
        [
            Logic(
                Unitary(
                    Atomic(
                        Defined(
                            DefinedAtomic(
                                Constant(
                                    DefinedConstant(
                                        DefinedFunctor(
                                            AtomicDefinedWord(
                                                DollarWord(
                                                    LowerWord(
                                                        "true",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
