src/snapshots/tptp__tests__tfx_system_atomic.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Constant(
    SystemConstant(
        SystemFunctor(
            AtomicSystemWord(
                DollarDollarWord(
                    LowerWord(
                        "system",
                    ),
                ),
            ),
        ),
    ),
)
