src/snapshots/tptp__tests__tfx_top_level_type-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
NonAtomic(
    Mapping(
        MappingType {
            domain: Atomic(
                Variable(
                    Variable(
                        UpperWord(
                            "A",
                        ),
                    ),
                ),
            ),
            range: Variable(
                Variable(
                    UpperWord(
                        "A",
                    ),
                ),
            ),
        },
    ),
)
