src/snapshots/tptp__tests__tfx_top_level_type.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Atomic(
    Variable(
        Variable(
            UpperWord(
                "A",
            ),
        ),
    ),
)
