src/snapshots/tptp__tests__tfx_type_arguments-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
TypeArguments(
    [
        Variable(
            Variable(
                UpperWord(
                    "A",
                ),
            ),
        ),
        Constant(
            TypeConstant(
                TypeFunctor(
                    Lower(
                        LowerWord(
                            "c",
                        ),
                    ),
                ),
            ),
        ),
    ],
)
