src/snapshots/tptp__tests__tfx_typed_variable.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
TypedVariable {
    variable: Variable(
        UpperWord(
            "X",
        ),
    ),
    typ: Variable(
        Variable(
            UpperWord(
                "A",
            ),
        ),
    ),
}
