src/snapshots/tptp__tests__tfx_unary_formula.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Infix(
    InfixUnary {
        left: Variable(
            Variable(
                UpperWord(
                    "X",
                ),
            ),
        ),
        op: InfixInequality,
        right: Variable(
            Variable(
                UpperWord(
                    "Y",
                ),
            ),
        ),
    },
)
