src/snapshots/tptp__tests__tfx_unit_formula-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Unary(
    Prefix(
        PrefixUnary {
            op: UnaryConnective,
            formula: Unitary(
                Atomic(
                    Defined(
                        DefinedAtomic(
                            Constant(
                                DefinedConstant(
                                    DefinedFunctor(
                                        AtomicDefinedWord(
                                            DollarWord(
                                                LowerWord(
                                                    "true",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        },
    ),
)
