src/snapshots/tptp__tests__tfx_unitary_formula-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Atomic(
    Defined(
        DefinedAtomic(
            Constant(
                DefinedConstant(
                    DefinedFunctor(
                        AtomicDefinedWord(
                            DollarWord(
                                LowerWord(
                                    "true",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
